ingress/traefik-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-ingressroute
  namespace: default
spec:
  entryPoints:
    - web
    - websecure
  tls:
    secretName: auth-tls-secret
  routes:
    - match: Host(`auth.example.com`) && PathPrefix(`/`)
      kind: Rule
      services:
        - name: whoami
          port: 80
      middlewares:
      - name: forwardauth
        namespace: default
    - match: Host(`auth.example.com`) && PathPrefix(`/whoami`)
      kind: Rule
      services:
        - name: whoami
          port: 80
      middlewares:
      - name: forwardauth-wo-redirect
        namespace: default
    - match: Host(`auth.example.com`) && PathPrefix(`/oauth2/`)
      kind: Rule
      services:
        - name: oauth2-proxy
          port: 80
      middlewares:
      - name: auth-headers
        namespace: default
